[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scenes/UI/interactive/TowerPreview.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/UI/interactive/Builder.gd" type="Script" id=2]
[ext_resource path="res://assets/towers/range.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 35.0

[node name="Builder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )

[node name="TowerPreview" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Tower" type="Sprite" parent="TowerPreview"]
rotation = 1.5708
scale = Vector2( 5, 5 )

[node name="Range" type="Sprite" parent="TowerPreview"]
texture = ExtResource( 5 )

[node name="BuildingShape" type="Area2D" parent="TowerPreview"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerPreview/BuildingShape"]
shape = SubResource( 1 )

[node name="BuildBar" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
margin_left = -300.0
margin_top = -100.0
margin_right = 300.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 100 )
custom_constants/separation = 10
alignment = 1

[connection signal="area_entered" from="TowerPreview/BuildingShape" to="." method="_on_BuildingShape_area_entered"]
[connection signal="area_exited" from="TowerPreview/BuildingShape" to="." method="_on_BuildingShape_area_exited"]
[connection signal="body_entered" from="TowerPreview/BuildingShape" to="." method="_on_BuildingShape_body_entered"]
[connection signal="body_exited" from="TowerPreview/BuildingShape" to="." method="_on_BuildingShape_body_exited"]
